--- a/no.5/style.css
+++ b/no.5/style.css
@@ -10,6 +10,12 @@ html{
     justify-content: space-between;
     height: 3rem;
 }
+
+.img1{
+    margin-top: 0.5rem;
+    height: 2rem;
+    margin-left: 0.5rem;
+}
 .header p{
     color: white;
     font-size: 1rem;
@@ -44,7 +50,7 @@ button{
 
 .content1{
     position: relative;
-    height:13rem;
+    height:12rem;
     background-image: url(img/background.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -52,7 +58,7 @@ button{
 
 .photo1{
     position: absolute;
-    top: 3rem;
+    top: 2.5rem;
     left: 1.5em;
     z-index: 2;
 }
@@ -61,12 +67,17 @@ img.small{
     width: 6rem;
     height: 6rem;
 }
+img.small2{
+    width: 1.2rem;
+    height: 1.5rem;
+}
+
 .page1{
     color: white;
     position: absolute;
     z-index: 3;
     left: 8rem;
-    top: 4rem;
+    top: 35%;
     font-size: 1.3rem;
 }
 .page2{
@@ -74,7 +85,7 @@ img.small{
     position: absolute;
     z-index: 3;
     left: 8rem;
-    top: 6.5rem;
+    top: 50%;
     font-size: 1.3rem;
 }
 
@@ -184,7 +195,6 @@ img.small{
 /*第七部分*/
 .content7{
     position: relative;
-
 }
 .content7 p{
     float: left;
@@ -201,6 +211,8 @@ img.small{
 .ten{
   margin-left: 6rem;
   margin-top:-2rem ;
+    /*padding-bottom: 1rem;
+    border-bottom: 1px solid gainsboro;*/
 }
 
-/* content7的机制有问题，高度不能再固定了，要改*/
+
