--- a/no.5/style.css
+++ b/no.5/style.css
@@ -106,7 +106,7 @@ img.small2{
 /* 第三部分 */
 .content3{
     position: relative;
-    height: 3rem;
+    height: 3.5rem;
     border-bottom: 1px solid #dcdcdc;
 }
 .two{
@@ -119,7 +119,7 @@ img.small2{
 /* 第四部分 */
 .content4{
     position: relative;
-    height: 3.5rem;
+    height: 4.5rem;
     border-bottom: 1px solid #dcdcdc;
 }
 .content4 p{
@@ -144,7 +144,7 @@ img.small2{
 /* 第五部分 */
 .content5{
     position: relative;
-    height: 3.5rem;
+    height: 4.5rem;
     border-bottom: 1px solid #dcdcdc;
 }
 .content5 p{
@@ -169,7 +169,7 @@ img.small2{
 /* 第六部分 */
 .content6{
     position: relative;
-    height: 3.5rem;
+    height: 4.5rem;
     border-bottom: 1px solid #dcdcdc;
 }
 .content6 p{
@@ -195,24 +195,20 @@ img.small2{
 /*第七部分*/
 .content7{
     position: relative;
+    padding-left: 1rem;
+    border-bottom: 1px solid #e1e5e7;
 }
-.content7 p{
-    float: left;
-}
+
 .nine{
+    position: absolute;
+    top: 50%;
+    margin-top: -1rem;
+    padding-right: 0.5rem;
+    border-right: 1px solid #808080;
     color: #808080;
-    position: relative;
-    left: 1rem;
-    top: .5rem;
-    width: 4.5rem;
-    border-right: 1px solid black;
-    border-right-color: #808080;
 }
 .ten{
-  margin-left: 6rem;
-  margin-top:-2rem ;
-    /*padding-bottom: 1rem;
-    border-bottom: 1px solid gainsboro;*/
+    margin: 1rem 1rem 1rem 5rem;
 }
 
 
